# freeader

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  freeader_emu.c  pervasive_4.41.tex
example/: example.c  example.h
firmware/: 0013.jbig  F303CC.ld  Makefile  firmware.c  jbig85.c  jbig_ar.c  libopencm3.rules.mk  libopencm3.target.mk  mod_cdcacm.c
firmware/include/: 0013.h  firmware.h
nanovg/src/: nanovg.h  nanovg_gl.h
src/: backend_cairo.c  backend_nanovg.c  core.c  core_internal.h  frontend_pugl.c  mum.c
stat/: Makefile  stat.r
test/: base.c  core.c  mock.c  mock.h
toolchain/: Makefile  freeader.h  freeader_enc.c  good_4.3.tex  pervasive_4.41.tex  theme.edc  toolchain.dia
utils/: CMakeLists.txt  freeader.h  freeader_dec.c  freeader_emu.c  freeader_enc.c  freeader_gen.c  freeader_toc.c  meson.build  meson_options.txt
utils/subprojects/d2tk/: Doxyfile  meson.build  meson_options.txt
utils/subprojects/d2tk/d2tk/: backend.h  base.h  core.h  d2tk.h  frontend_fbdev.h  frontend_pugl.h  hash.h
utils/subprojects/d2tk/example/: d2tk_fbdev.c  d2tk_pugl.c  example.c
utils/subprojects/d2tk/nanovg/src/: nanovg.c
utils/subprojects/d2tk/src/: backend_cairo.c  backend_nanovg.c  base.c  core.c  frontend_fbdev.c
